--- a/package.json
+++ b/package.json
@@ -1,22 +1,17 @@
 {
   "name": "idrujba",
-  "version": "1.0.0",
-  "description": "Magazin online de drujbe",
-  "main": "index.js",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/www"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/andrei1902/iDrujba.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/andrei1902/iDrujba/issues"
-  },
-  "homepage": "https://github.com/andrei1902/iDrujba#readme",
   "dependencies": {
-    "webpack": "^1.13.1"
+    "body-parser": "~1.13.2",
+    "cookie-parser": "~1.3.5",
+    "debug": "~2.2.0",
+    "express": "~4.13.1",
+    "jade": "~1.11.0",
+    "morgan": "~1.6.1",
+    "serve-favicon": "~2.3.0"
   }
 }
