--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jade": "^1.11.0",
     "morgan": "^1.6.1",
     "nodemon": "^1.9.2",
-    "serve-favicon": "^2.3.0"
+    "serve-favicon": "^2.3.0",
+    "webpack": "^1.13.1"
   }
 }
